# back-end/src/FarmContext/devices/command_handler.go
@@ -26,3 +26,18 @@ func (h *DeviceCommandHandler) AddWaterHandler(ctx context.Context, command AddW
 	}
 	return err
 }
+func (h *DeviceCommandHandler) UpdateWaterHandler(ctx context.Context, command UpdateWaterCommand) error {
+	device, err := h.deviceRepo.FindById(ctx, command.DeviceId)
+	if err != nil {
+		return err
+	}
+	waterLog, err := NewWaterLog(device.ID, command.UserId, command.Volume, command.Time)
+	if err != nil {
+		return err
+	}
+
+	if err := h.waterLogRepository.Updates(ctx, waterLog); err != nil {
+		return err
+	}
+	return err
+}
